[tool.poetry]
name = "pr-review-agent"
version = "0.1.0"
description = "This is the pr review agent"
authors = ["aryan-aiplanet <aryan@aiplanet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
celery = "^5.4.0"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.4"
pydantic-settings = "^2.7.1"
langchain = ">=0.1.0"
langchain-core = ">=0.1.10"
langgraph = ">=0.0.10"
openai = ">=1.12.0"
tiktoken = ">=0.5.2"
typing-extensions = ">=4.9.0"
langchain-community = "^0.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
